--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>Final Fantasy 7</title>
   </head>
   <body>
-    <div id="root"></div>   
+
+    <!-- This is root DOM node where everything is managed by React -->
+    <div id="root"></div>
+  
   </body>
 </html>
